feat: list, get and create team
