# src/team/team.controller.ts
@@ -1,20 +1,29 @@
 import express, { Request, Response } from 'express';
+import Team from './team.model';
+import validate from '../validation';
+import { createTeamValidation, getTeamValidation } from './team.validation';
+import { TEAM_NOT_FOUND } from '../messages';
 
 const router = express.Router();
 
-router.get('/', (req: Request, res: Response) => {
-  res.status(200).json([
-    {
-      id: 1,
-      name: 'Team A',
-      location: 'City A',
-    },
-    {
-      id: 2,
-      name: 'Team B',
-      location: 'City B',
-    },
-  ]);
+router.get('/:id', validate(getTeamValidation), async (req: Request, res: Response) => {
+  const team = await Team.findById(req.params.id);
+  if (!team) {
+    return res.status(404).json({ message: TEAM_NOT_FOUND });
+  }
+
+  return res.status(200).json(team);
+});
+
+router.get('/', async (req: Request, res: Response) => {
+  const teams = await Team.find();
+  return res.status(200).json(teams);
+});
+
+router.post('/', validate(createTeamValidation), async (req: Request, res: Response) => {
+  const { name, club } = req.body;
+  const newTeam = await Team.create({ name, club });
+  return res.status(201).json(newTeam);
 });
 
 export default router;
