# src/team/team.swagger.yaml
@@ -4,7 +4,7 @@ paths:
       summary: Get the list of water polo teams.
       tags:
         - Teams
-      description: Retrieve the complete list of registered water polo teams.
+      description: Retrieve the list of active water polo teams.
       responses:
         '200':
           description: List of teams retrieved successfully.
@@ -15,15 +15,92 @@ paths:
                 items:
                   type: object
                   properties:
-                    id:
-                      type: integer
-                      description: Unique ID of the club.
+                    _id:
+                      type: string
+                      description: Unique UUID of the team.
                     name:
                       type: string
-                      description: Name of the water polo club.
-                    location:
+                      description: Name of the water polo team.
+                    club:
                       type: string
-                      description: Location of the club.
+                      description: Unique UUID of the team's club.
         '500':
           description: Internal server error.
 
+    post:
+      summary: Create a new water polo team.
+      tags:
+        - Teams
+      description: Create a new water polo team with the provided name and address.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  description: Name of the water polo team. Must be at least 3 characters long.
+                  minLength: 3
+                club:
+                  type: string
+                  description:  Unique UUID of the team's club.
+            required:
+              - name
+      responses:
+        '201':
+          description: Team created successfully.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  _id:
+                    type: string
+                    description: Unique UUID of the team.
+                  name:
+                    type: string
+                    description: Name of the water polo team.
+                  club:
+                    type: string
+                    description: Unique UUID of the team's club.
+        '400':
+          description: Bad request (e.g., invalid input).
+        '500':
+          description: Internal server error
+
+  /teams/{id}:
+    get:
+      summary: Get a water polo team by ID.
+      tags:
+        - Teams
+      description: Retrieve a water polo team by its unique ID.
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: Unique ID of the team to retrieve.
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Team retrieved successfully.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  _id:
+                    type: string
+                    description: Unique UUID of the team.
+                  name:
+                    type: string
+                    description: Name of the water polo team.
+                  club:
+                    type: string
+                    description: Unique UUID of the team's club.
+        '404':
+          description: Team not found.
+        '500':
+          description: Internal server error
